src/views/pages/Canvas/StoryBoard.css
/* ... */
.nav-tabs .nav-link.disabled {
    color: #bdcddc;
    background-color: transparent;
    border-color: transparent;
}

.image-editor {
    width: 75%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.tab-group{
    display: flex;
    width: 100%;
    background-color: #f7f9fb;
    border-radius: 50px;
    border: 1px solid #dfe3ed;
    padding: 3px;
    height: 45px;
}
.toggle-group {
    display: -webkit-flex;
    display: flex;
    width: 100%;
    background-color: #f7f9fb;
    border-radius: 5px !important;
    border: none;
    padding: 3px;
    height: 45px;
    border: 1px solid #e2e9ec;
}

.toggle-group-2 {
    width: 50% !important;
    margin-left: auto;
    margin-right: auto;
}

.toggle-group-settings {
    width: 525px;
    margin-left: auto;
    margin-right: auto;
}

.toggle-group .btn.btn-secondary {
    background-color: #fff !important;
    line-height: 15px !important;
    color: #132144 !important;
    border-radius: 4px !important;
    box-shadow: 0 2px 3px 0 rgba(14,30,37,.1);
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 9px;
    border: none !important;
    height: 37px;
}

.toggle-group .btn.btn-outline-secondary {
    font-weight: 400 !important;
    color: #8da2b5 !important;
    line-height: 15px !important;
    border: none !important;
    border-radius: 5px !important;
    font-size: 15px !important;
}

.toggle-group .btn.btn-outline-secondary:hover {
    color: #132144 !important;
    background-color: #F7F9FB !important;
}

.toggle-group .btn.btn-outline-secondary:active {
    font-weight: 400 !important;
    color: #132144 !important;
    font-size: 15px !important;
}
.MenuItem .menu-tip {
    padding: 0px 4px 0px 8px !important;
    color: #fff;
    font-size: 14px;
    border-radius: 100%;
    font-weight: bold;
    position: absolute;
    display: none !important;
    top: 10px;
    right: 5px;
    background-image: url('/info.svg');
    background-repeat: no-repeat;
    background-size: 13px;
    background-position: center;
}

.MenuItem:hover .menu-tip {
    display: block !important;
}

.home-block .menu-tip-home {
    position:absolute;
    left: 15px;
    top: 5px;
}

.edit-name{
    position: absolute;
    left: 14px;
    top: 8px;
}
.home-block .menu-tip-command {
    position:absolute;
    left: 15px;
    height: 100px;
    color: #8da2b5 !important;
    font-weight: bolder;
    background-image: url("/flows.svg");
    width: 20px;
    margin-top: 2px;
    background-repeat: no-repeat;
    background-size: 14px;
}
.flow-icon {
    background-image: url("/flows.svg");
    width: 20px;
    height: 20px;
    background-size: 16px;
    background-repeat: no-repeat;
    background-position: center;
}
.menu-tip {
    color: #8da2b5 !important;
    transition: all 0.15s ease;
}

.menu-tip:hover {
    color: #8da2b5 !important;
}

.btn-info {
    background-color: transparent !important;
    border: 1px solid #8da2b555 !important;
    font-size: 17px !important;
    color: #8da2b5 !important;
    border-radius: 5px;
    padding-right: 30px;
    padding-left: 30px;
    padding-top: 13px;
    padding-bottom: 13px;
    width: 130px;
    cursor: pointer;
    transition: all 0.2s;
}

.btn-info:hover {
    color: #42A5FF !important;
    background-color: #cce5ff70 !important;
    border-color: #b8daff !important;
    /*    transform: scale(1.04);*/
}

.btn-info:focus {
    box-shadow: none !important;
    cursor: pointer !important;
}

.Menu #sidebar .section-blocks {
    display: flex;
    flex-wrap: wrap;
    margin: 0 -4px;
}

.MenuItem .MenuText {
    flex: 1;
    display: block;
    align-items: center;
    justify-content: space-between;
    margin-top: 5px;
    float: left;
}
.btn-link{
    color: #5D9DF5;
    background-color: none;
    font-size: 13px;
    transition: ease all 0.25s;
}
.btn-link:hover{
    color: #5696EE;
    background-color: none;
    font-size: 13px;
}

.MenuItem:hover {
    /*transform: scale(1.03);*/
    transform: translateY(-1px);
    box-shadow: 0 0 1px 1px rgba(17, 49, 96, .06), 0 2px 4px 0 rgba(17, 49, 96, .12) !important;
    border: 1px solid #fff !important;
    /*    border-radius: 10px;*/
    background-color: #fff !important;
    color: #0b1a38 !important;
}

.MenuItem:active {
    /*    transform: rotate(-6deg);*/
}

.MenuItem .MenuIcon {
    display: inline-block;
    justify-content: center;
    align-items: center;
    text-align: center;
    /*    background-color: #e2e9ec;*/
    /*color: #2325E2;*/
    color: #fff;
    border-radius: 4px;
    font-size: 19px;
    width: 32px;
    height: 32px;
    float: left;
    padding-top: 2px;
    margin-right: 8px;
    margin-left: 5px;
    color: #b6c9d4 !important;
    /*border-radius: 10px 0px 0px 10px !important;*/
}

.ModuleIcon {
    width: 37px;
    height: 37px;
}

.helpMenu.MenuItem {
    display: flex;
    padding: 5px;
    align-items: center;
}

.helpMenu.MenuItem>.MenuIcon {
    border-radius: 5px;
    margin-right: 10px;
    /*padding: 10px;*/
    width: 60px;
    text-align: center;
    height: 55px;
    line-height: 55px;
    color: #fff;
}

.helpMenu.MenuItem h5 {
    width: 100%;
    margin-bottom: 0;
}

#diagram {
    width: 100%;
    height: 100%;
    padding-left: 40px;
}

#diagram.no-padding {
    padding-left: 0 !important;
}

.srd-diagram {
    width: 100%;
    height: 100%;
    background-color: #F7F9FB;
    /*    background-image: url('/images/dot.svg');
    background-repeat: repeat;*/
}

.App.review .blocks {
    border-color: #FFAB91 !important;
    border-width: 3px !important;
}

.App.review #diagram {
    /*border: 10px solid #D84315;*/
}

.App.review #TitleBar {
    /*border-bottom: 10px solid #D84315 !important;*/
}
/* ... */

